--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -6,7 +6,7 @@
     </div>
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item {{ispage index.html}}active{{end}}" href="/">Home</a>
-      <a class="sidebar-nav-item {{ispage menu1/*}}active{{end}}" href="/blogs/">Blogs</a>
+      <a class="sidebar-nav-item {{ispage menu1/*}}active{{end}}" href="/blogposts/">Blogs</a>
       <a class="sidebar-nav-item {{ispage menu2/*}}active{{end}}" href="/code/">Code</a>
       <a class="sidebar-nav-item {{ispage menu3/*}}active{{end}}" href="/about/">About Me</a>
     </nav>
