--- a/_layout/tag.html
+++ b/_layout/tag.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {{insert style.html}}
+  <link rel="stylesheet" href="/css/franklin.css">
+  <link rel="stylesheet" href="/css/basic.css">
   <title>Tag: {{fill fd_tag}}</title>
 </head>
 <body>
-  {{insert sidebar.html}}
+  {{insert header.html}}
   <div class="{{div_content}}">
     <h1>Tag: {{fill fd_tag}}</h1>
     {{taglist}}
